--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,59 +34,11 @@ android {
     }
 
     buildFeatures {
-        viewBinding true
-    }
-
-    dataBinding {
-        enabled = true
+        dataBinding true
     }
 }
 
 dependencies {
-
-//    //############ ROOM
-//    def room_version = "2.5.0"
-//    implementation "androidx.room:room-runtime:$room_version"
-//    kapt "androidx.room:room-compiler:$room_version"
-//    //############
-//
-//    //############ RX java
-//    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
-//    implementation "androidx.room:room-rxjava3:$room_version"
-//    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
-//    //############
-//
-//    //############ Glide
-//    implementation 'com.github.bumptech.glide:glide:4.15.0'
-//    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.0'
-//    //############
-//
-//    //############ Picasso
-//    implementation 'com.squareup.picasso:picasso:2.8'
-//    //############
-//
-//    //############ RetroFit
-//    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-//    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-//    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
-//    //############
-//
-//    //############ Architecture components
-//    def lifecycle_version = "2.6.1"
-//    // Annotation processor
-//    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
-//    // ViewModel
-//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-//    // LiveData
-//    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-//    // optional - ReactiveStreams support for LiveData
-//    implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:$lifecycle_version"
-//    //############
-//
-//
-//    //############ DataBinding
-//    implementation 'com.android.databinding:compiler:3.1.4'
-//    //############
 
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
